# pathsgames

./: .env.example  .gitignore  README.md  ROADMAP.md  TODO.MD  TODO.md  package-lock.json
code/backend-python/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
code/backend-python/app/: config.py  launcher.py
code/backend-python/app/adapters/auth/: jwt_adapter.py
code/backend-python/app/adapters/persistence/auth/: guest_persistence_adapter.py  models.py  token_persistence_adapter.py
code/backend-python/app/adapters/rest/: echo_controller.py
code/backend-python/tests/: test_echo_service.py
code/backend/python/: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt  sonar-project.properties
code/backend/python/app/: config.py  launcher.py
code/backend/python/scripts/: seed_stories.py
code/backend/python/tests/: test_api.py  test_content_controller.py  test_content_models.py  test_content_query_service.py  test_guest_admin_controller.py  test_guest_admin_service.py  test_guest_auth_controller.py  test_guest_auth_service.py  test_guest_persistence_adapter.py  test_jwt_adapter.py  test_jwt_middleware.py  test_seed_dev_data.py  test_session_controller.py  test_session_service.py  test_story_admin_controller.py  test_story_controller.py  test_story_crud_admin_controller.py  test_story_crud_service.py  test_story_import_service.py  test_story_models.py  test_story_persistence_adapter.py  test_story_query_service.py  test_story_read_adapter.py  test_story_read_adapter_extended.py  test_token_persistence_adapter.py
(+903 files in other folders)
