[tool.poetry]
name = "paths-games-backend-python"
version = "0.16.0"
description = "FastAPI Hexagonal Backend for Paths Games"
authors = ["Paths Games Dev Team <dev@paths.games>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.35"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.0"

pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.1.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = ["."]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
